# FCCAnalyses

./: .clang-format  .gitignore  .travis.yml  .zenodo.json  CMakeLists.txt  FCCAnalysisRun.py  LICENSE  README.md  ZH_Hadronic_stage1.py  common_defaults.py  david_commands.txt  dummy_fit.py  fccee_flavtagging_edm4hep_wc.json  index.html  install.sh  localSetup.sh  mysetup.sh  newfile.txt  setup.py  setup.sh  setupUserCode.sh  setup_lcg.sh
Madgraph/LHAPDF-6.2.1/: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README  TODO  aclocal.m4  config.status  configure  configure.ac  lhapdf.conf  lhapdf.pc  lhapdf.pc.in  libtool  mkindex  plotpdfs  testlhapdf  testpdfs
Madgraph/LHAPDF-6.2.1/config/: config.h  config.h.in
Madgraph/LHAPDF-6.2.1/doc/: Doxyfile  Doxyfile.in  Makefile  Makefile.am  Makefile.in  mkpdflist  pdfsets.dox
Madgraph/LHAPDF-6.2.1/examples/: Makefile  Makefile.am  Makefile.in  analyticpdf.cc  compatibility.cc  fexample1.f90  hessian2replicas.cc  pythonexample.py  reweight.cc  testpdf.cc  testpdfset.cc  testpdfunc.cc  testpdfunc.py
Madgraph/LHAPDF-6.2.1/include/: Makefile  Makefile.in
Madgraph/LHAPDF-6.2.1/m4/: compilerflags.m4  cython.m4
Madgraph/LHAPDF-6.2.1/src/: AlphaS.cc  AlphaS_Analytic.cc  AlphaS_Ipol.cc  AlphaS_ODE.cc  BicubicInterpolator.cc  BilinearInterpolator.cc  Config.cc  ContinuationExtrapolator.cc  ErrExtrapolator.cc  Factories.cc  GridPDF.cc  Info.cc  Interpolator.cc  LHAGlue.cc  LogBicubicInterpolator.cc  LogBilinearInterpolator.cc  Makefile  Makefile.am  Makefile.in  NearestPointExtrapolator.cc  PDF.cc  PDFIndex.cc  PDFInfo.cc  PDFSet.cc  Paths.cc  Utils.cc
Madgraph/LHAPDF-6.2.1/tests/: Makefile  Makefile.am  Makefile.in  testalphas.cc  testgrid.cc  testindex.cc  testinfo.cc  testnsetperf.cc  testpaths.cc  testperf.cc  testsetperf.cc
Madgraph/LHAPDF-6.2.1/wrappers/: Makefile  Makefile.in
addons/: CMakeLists.txt
addons/FastJet/: CMakeLists.txt  ExternalRecombiner.h  ValenciaPlugin.h
addons/FastJet/python/: jetClusteringHelper.py
addons/FastJet/src/: ExternalRecombiner.cc  JetClustering.cc  ValenciaPlugin.cc
addons/ONNXRuntime/: CMakeLists.txt  ONNXRuntime.h  WeaverInterface.h
addons/ONNXRuntime/python/: jetFlavourHelper.py
addons/ONNXRuntime/src/: ONNXRuntime.cc  WeaverInterface.cc
addons/ONNXRuntime/test/: onnxtest.cpp
addons/TMVAHelper/: CMakeLists.txt  TMVAHelper.h
addons/TMVAHelper/python/: TMVAHelper.py
addons/TMVAHelper/src/: TMVAHelper.cc
addons/helpers/: TMVAHelper.h  TMVAHelper.py
analyses/: CMakeLists.txt
analyses/analysis_example/scripts/: analysis_example.py
analyses/analysis_example/src/: DummyAnalysis.cc  classes_def.xml
analyses/analysis_example/test/: analysis_example.py  new_package_building.sh  standard_integration.sh
analyzers/dataframe/: Algorithm.cc  Algorithm.h  Algorithms.cc  Algorithms.h  Bs2DsK.cc  Bs2DsK.h  Bs2JPsiPhi.cc  Bs2JPsiPhi.h  CMakeLists.txt  CaloNtupleizer.cc  CaloNtupleizer.h  CalorimeterReco.cc  CalorimeterReco.h  ExternalRecombiner.cc  ExternalRecombiner.h  ExternalRecombiner.hh  FCCAnalyses.cc  FCCAnalyses.h  JetClustering.cc  JetClustering.h  JetClusteringUtils.cc  JetClusteringUtils.h  JetConstituentsUtils.cc  JetConstituentsUtils.h  JetTaggingUtils.cc  JetTaggingUtils.h  LinkDef.h  MCParticle.cc  MCParticle.h  ReconstructedParticle.cc  ReconstructedParticle.h  ReconstructedParticle2MC.cc  ReconstructedParticle2MC.h  ReconstructedParticle2Track.cc  ReconstructedParticle2Track.h  Smearing.cc  Smearing.h  Utils.h  ValenciaPlugin.h  Vertex.cc  (+23 more)
analyzers/dataframe/FCCAnalyses/: Algorithms.h  Analysis_FCChh.h  Association.h  AssociationSource.h  CaloNtupleizer.h  Defines.h  EventFilter.h  JetClustering.h  JetClusteringUtils.h  JetClusteringUtilsSource.h  JetConstituentsUtils.h  JetFlavourUtils.h  JetTaggingUtils.h  LinkDef.h  LinkSource.h  Logger.h  MCParticle.h  MCParticleCodes.h  ONNXRuntime.h  ReconstructedParticle.h  ReconstructedParticle2MC.h  ReconstructedParticle2Track.h  ReconstructedParticleSource.h  ReconstructedTrack.h  SmearObjects.h  Smearing.h  TLVHelpers.h  Track.h  TrackSource.h  TrackUtils.h  Utils.h  VertexFinderActs.h  VertexFinderLCFIPlus.h  VertexFitterActs.h  VertexFitterSimple.h  VertexingUtils.h  WeaverInterface.h  WeaverUtils.h  defines.h  energyReconstructFourJet.h  (+3 more)
analyzers/dataframe/case-studies/: CMakeLists.txt
analyzers/dataframe/src/: Algorithms.cc  Analysis_FCChh.cc  Association.cc  AssociationSource.cc  CaloNtupleizer.cc  EventFilter.cc  ExternalRecombiner.cc  JetClustering.cc  JetClusteringUtils.cc  JetClusteringUtilsSource.cc  JetConstituentsUtils.cc  JetFlavourUtils.cc  JetTaggingUtils.cc  MCParticle.cc  ONNXRuntime.cc  ReconstructedParticle.cc  ReconstructedParticle2MC.cc  ReconstructedParticle2Track.cc  ReconstructedParticleSource.cc  ReconstructedTrack.cc  SmearObjects.cc  Smearing.cc  Track.cc  TrackSource.cc  TrackUtils.cc  ValenciaPlugin.cc  VertexFinderActs.cc  VertexFinderLCFIPlus.cc  VertexFitterActs.cc  VertexFitterSimple.cc  VertexingUtils.cc  WeaverInterface.cc  WeaverUtils.cc  awkwardtest.cc  dummyLoader.cc  myFinalSel.cc  myUtils.cc
config/templates/: Analysis.cc  Analysis.h  CMakeLists.txt  Package.h  analysis_cfg.py  classes.h  classes_def.xml
e4hsource/: CMakeLists.txt
e4hsource/src/: EDM4hepDataSource.cxx  EDM4hepLegacySource.cxx  EDM4hepSource.cxx
e4hsource/test/: analysis_stage1.py  histmaker_legacy_source.py  histmaker_source.py  stages_source.py  standalone.py  standalone_legacy.py
tests/: CMakeLists.txt  build_new_case_study.sh  get_test_inputs.sh
tests/benchmark/: CMakeLists.txt  algorithms.cpp  myutils.cpp
tests/data_source/: test_low_level.cxx  test_low_level_associations.cxx  test_source.cxx  test_source_associations.cxx
tests/integration/: CMakeLists.txt  data_source.cxx  data_source_associations.cxx  low_level_associations.cxx  low_level_edm4hep.cxx
tests/python/: test_combine_backend.py
tests/unittest/: CMakeLists.txt  JetClusteringUtilsSource.cpp  ReconstructedParticle.cpp  ReconstructedParticleSource.cpp  algorithms.cpp  myutils.cpp  onnxtest.cpp  unittest.cpp
(+4817 files in other folders)
